<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".settingsfragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/huge_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_thanks_to"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/huge_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mychael_m_engel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicoding_indonesia"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text" />
    </LinearLayout>
</FrameLayout>