<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginfragment.ForgotPasswordFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edt_forgot_email"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="@dimen/edt_login_height"
            android:background="@drawable/round_edit_text"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/edt_login_pLeft"
            android:paddingEnd="@dimen/edt_login_pRight"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_forgot_password"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="@dimen/edt_login_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edt_login_pLeft"
            android:paddingEnd="@dimen/edt_login_pRight"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_forgot_email" />

        <EditText
            android:id="@+id/edt_forgot_password_2"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="@dimen/edt_login_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_edit_text"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edt_login_pLeft"
            android:paddingEnd="@dimen/edt_login_pRight"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_forgot_password" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/button_green"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_forgot_password_2" />

        <ProgressBar
            android:id="@+id/pb_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_forgot_password_2" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>