<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginfragment.LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_form"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/edt_login_email"
                android:layout_width="@dimen/edt_login_width"
                android:layout_height="@dimen/edt_login_height"
                android:background="@drawable/round_edit_text"
                android:hint="@string/email_address"
                android:paddingStart="@dimen/edt_login_pLeft"
                android:paddingEnd="@dimen/edt_login_pRight"
                android:textSize="@dimen/normal_text"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="@dimen/edt_login_width"
                android:layout_height="@dimen/edt_login_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/round_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/edt_login_pLeft"
                android:paddingEnd="@dimen/edt_login_pRight"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_forgot_password"
                android:textSize="@dimen/small_text"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintStart_toStartOf="@id/edt_login_password"
                app:layout_constraintTop_toBottomOf="@id/edt_login_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/btn_login_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_login_mTop"
                android:background="@drawable/button_green"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_login_mTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_password"
                android:visibility="invisible"/>
        </android.support.constraint.ConstraintLayout>
        <ProgressBar
            android:id="@+id/pb_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</FrameLayout>