<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsfragment.ProfileFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/edt_settings_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_login_height"
            android:layout_marginTop="@dimen/tiny_margin"
            android:background="@drawable/round_edit_text"
            android:hint="@string/name"
            android:paddingStart="@dimen/edt_login_pLeft"
            android:paddingEnd="@dimen/edt_login_pRight"
            android:textSize="@dimen/normal_text"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/text"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/edt_settings_name"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/edt_settings_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_login_height"
            android:layout_marginTop="@dimen/tiny_margin"
            android:background="@drawable/round_edit_text"
            android:hint="@string/phone_number"
            android:paddingStart="@dimen/edt_login_pLeft"
            android:paddingEnd="@dimen/edt_login_pRight"
            android:textSize="@dimen/normal_text"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/text2"/>
        <ProgressBar
            android:id="@+id/pb_save_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save_profile"
            app:layout_constraintEnd_toEndOf="@+id/btn_save_profile"
            app:layout_constraintStart_toStartOf="@+id/btn_save_profile"
            app:layout_constraintTop_toTopOf="@+id/btn_save_profile" />
        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:background="@drawable/button_green"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/edt_settings_phone"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>